# code-factory-2-forge

./: LICENSE-APACHE  NOTICE  README.md  install.py  install.sh  pyproject.toml  setup.py
.github/workflows/: ci.yaml  publish-pypi.yml
examples/: notifier.ssat.yaml
forgeline/: __init__.py  adapters.py  adoption.py  attribution.py  cli.py  demo.py  demo_learning.py  intent_thread.py  learning.py  orchestrator.py  pr_optimizer.py  provenance.py  refinement.py  run_store.py  skill_memory.py  source_scope.py  ssat.py  states.py
forgeline/gates/: __init__.py  adversary.py  judge.py  qa_audit.py  reverse_classical.py  runtime_smoke.py  skill_check.py  typescript_mutants.py
tests/: conftest.py  test_forgeline.py
