[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "code-factory-2-forge"
version = "0.10.5"
description = "ForgeLine — the autonomous outer loop for AI software factories. A CLI-backed state machine that drives intent -> spec -> plan -> code -> adversarial review -> ship, orchestrating SpecLine (spec governance) and Harness Software Factory (compiled decisions), with self-improving skills and architecture-as-a-CI-gate."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT OR Apache-2.0"
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/zrk222/code-factory-2-forge"
Documentation = "https://github.com/zrk222/code-factory-2-forge#readme"
Issues = "https://github.com/zrk222/code-factory-2-forge/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
forge = "forgeline.cli:main"

[tool.setuptools.packages.find]
include = ["forgeline*"]

[tool.setuptools.package-data]
forgeline = ["../templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
